--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -23,5 +23,13 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true
   },
-  "include": ["src"]
+
+  // コンパイル対象
+  "include": ["src"],
+
+  // コンパイル対象外
+  "exclude": [
+    "node_modules",                           
+    "dist"
+  ]
 }
