--- a/package.json
+++ b/package.json
@@ -3,14 +3,15 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "start": "vite preview",
-    "build": "tsc -b && vite build",
-    "preview": "vite preview",
-    "lint": "eslint 'src/**/*.{js,ts,tsx}'",
-    "lint:fix": "eslint 'src/**/*.{js,ts,tsx}' --fix"
-  },
+"scripts": {
+  "dev": "vite",
+  "start": "node server.js",  
+  "build": "tsc -b && vite build",
+  "preview": "vite preview",
+  "lint": "eslint 'src/**/*.{js,ts,tsx}'",
+  "lint:fix": "eslint 'src/**/*.{js,ts,tsx}' --fix",
+  "heroku-postbuild": "tsc -b && vite build"
+},
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
