--- a/package.json
+++ b/package.json
@@ -5,12 +5,11 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "start": "vite",
-    "build": "tsc && vite build",
+    "start": "vite preview",
+    "build": "tsc -b && vite build",
     "preview": "vite preview",
     "lint": "eslint 'src/**/*.{js,ts,tsx}'",
-    "lint:fix": "eslint 'src/**/*.{js,ts,tsx}' --fix",
-    "heroku-postbuild": "npm install && npm run build"
+    "lint:fix": "eslint 'src/**/*.{js,ts,tsx}' --fix"
   },
   "dependencies": {
     "@emotion/react": "^11.11.4",
@@ -46,7 +45,7 @@
     "postcss": "^8.4.38",
     "prettier": "^3.3.3",
     "tailwindcss": "^3.4.4",
-    "typescript": "^5.5.4",
+    "typescript": "^5.2.2",
     "vite": "^5.3.1"
   }
 }
